2004-08-27  Brian Kahne  <bkahne@ibmoto.com>

	* minicc: Moved the parallelism of the compiler out of Compiler.pa
	and into CodeGen so that I could use the double-dispatch
	mechanism, rather than having to use dynamic_cast.  This means
	that the only dynamic_cast stuff is conained within Node.C.  Just
	about everything else has been implemented as virtual function
	calls w/double-dispatch.

	* minicc:  Moved the spawn/result-vector code into a series of
	templates in Interface.h.

	* minicc:  Changed the architecture somewhat:  All code generation
	data now resides within CodeGen:  Shared data is in an object
	called SharedData and per-thread data is in ThreadData.  A new
	CodeGen object is spawned for each function encountered.

2004-08-26  Brian Kahne  <bkahne@ibmoto.com>

	* minicc: Finished code generation.  Added regressions, including
	one which runs a program compiled by minicc.  This is enabled only
	if we are building on an x86 machine.

2004-08-20  Brian Kahne  <bkahne@ibmoto.com>

	* minicc: Modified main parser/compiler routine so that we spawn
	off a compile job after each file is done.  We then synchronize at
	the end.

	* minicc: Added type-checking and flow-control analysis passes.
	These are done in parallel across all top-level items in a
	translation unit.

2004-08-19  Brian Kahne  <bkahne@ibmoto.com>

	* minicc: Fixed bug: I wasn't calling setinfo on all of the Node
	objects that I should have, in cparser.yy.

	* minicc: Added symbol-table generation.  I decided to remove the
	double-dispatch stuff, because it really doesn't work that well
	(refer to "More Effective C++" for why the double-virtual function
	call is not an idea solution).  Instead, I'm just using
	single-dispatch with virtual functions in the Node class.

2004-08-18  Brian Kahne  <bkahne@ibmoto.com>

	* minicc: AST generation seems to be working; added regressions to
	test this.

2004-08-11  Brian Kahne  <bkahne@ibmoto.com>

	* minicc:  Initial AST code done.
