@@ -634,7 +634,7 @@ TBD</blockquote>
 <hr class="footer"/>
 <div class="footer">
 <a class="reference" href="schedule.rst">View document source</a>.
-Generated on: 2004/07/22 16:52:12 CDT.
+Generated on: 2004/08/30 16:19:58 CDT.
 Generated by trip.prl release 1.2.2 from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 </div>
 </body>
